# CoRE_AutoRobot_2024_sample

./: .gitignore  LICENSE  README.md
corejp_sample_commander/: package.xml  setup.cfg  setup.py
corejp_sample_commander/corejp_sample_commander/: commander.py  joy.py
corejp_sample_commander/launch/: all.launch.py  joy.launch.py
corejp_sample_controller/: package.xml  setup.cfg  setup.py
corejp_sample_controller/corejp_sample_controller/: hammer.py  mazemaze.py  roller.py  turret.py
corejp_sample_controller/launch/: controller.launch.py
corejp_sample_detector/: package.xml  setup.cfg  setup.py
corejp_sample_detector/corejp_sample_detector/: stop_sign_detector.py
corejp_sample_detector/launch/: detector.launch.py
