<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corejp_sample_commander</name>
  <version>1.0.0</version>
  <description>sample program for CoRE 2024 auto robot</description>
  <maintainer email="info-core@scramble-robot.org">CoRE competition committee</maintainer>
  <license>Apache License 2.0</license>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-setuptools</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
